# slido-upvoter

./: LICENSE  Pipfile  README.md  main.py  pyproject.toml  upvote.py
.github/workflows/: codeql.yml
