[tool.poetry]
name = "micxer-slido-upvoter"
version = "0.1.0"
description = "Upvote your slido question"
authors = ["micxer <micxer@micxer.de>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.13"
playwright = "^1.56.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
